# otus7

./: CMakeLists.txt  README.md  file_filter.cpp  file_filter.h  hash.cpp  hash.h  main.cpp  reader.cpp  reader.h  scanner.cpp  scanner.h  test_file_filter.cpp  test_hash.cpp  test_reader.cpp  test_scanner.cpp
.github/workflows/: release.yml
